# Solana-security-audit

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: generate_reports.rs  known-bad-addresses.json  sample-cli-output.txt  sample-high-risk-report.json  sample-low-risk-report.json
src/: cli.rs  config.rs  display.rs  errors.rs  lib.rs  main.rs  malicious.rs  mint_risk.rs  program_exposure.rs  scanner.rs  scoring.rs
src/report/: json.rs  mod.rs
src/risk/: mod.rs  rules.rs  scoring.rs
src/rpc/: client.rs  mod.rs
src/scanner/: malicious.rs  mod.rs  program.rs  token.rs  wallet.rs
tests/: cli_tests.rs  risk_scoring_tests.rs
