[package]
name = "wallet-audit"
version = "0.1.0"
edition = "2021"
description = "Solana wallet security audit CLI — scan any wallet for risky delegates, upgradeable programs, freeze authorities, and known exploits"
license = "MIT"

[dependencies]
solana-client = "2.2"
solana-sdk = "2.2"
solana-account-decoder = "2.2"
spl-token = "6.0"
spl-token-2022 = "7.0"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
colored = "3"
anyhow = "1"
bs58 = "0.5"
